# fast_api_zero

./: .env.example  .env_example  .gitignore  LICENSE  pyproject.toml  pytest.ini
app/: config.py  database.py  main.py  models.py  schemas.py  security.py  settings.py
app/routers/: auth.py  todos.py  users.py
migrations/: env.py
migrations/versions/: 04442b8651ca_add_updated_at_column_in_users_table.py  4b62b34ddeac_add_new_columns_todo_table.py  99f86315e825_create_todos_table.py  9adc2c83f08c_create_users_table.py
tests/: conftest.py  test_auth.py  test_database.py  test_main.py  test_todos.py  test_users.py
