[project]
name = "fast_zero"
version = "0.1.0"
description = "FastAPI do zero!"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "fastapi[standard]>=0.127.1",
    "logfire[fastapi]>=4.16.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pyrefly>=0.46.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.10",
    "taskipy>=1.14.1",
]

[tool.pyrefly]
project-includes = ['app/**/*.py']
project-excludes = ["migrations/**"]
search-path = ['app']
python-version = '3.12'

[tool.ruff]
line-length = 79
target-version = 'py312'
extend-exclude = ['migrations']

[tool.ruff.lint]
extend-select = [
    'I',
    'UP',
    'B',
    'A',
    'C4',
    'RET',
    'SIM',
    'TC',
    'ARG',
    'PT',
    'FA',
    'F',
    'ISC',
    'FAST',
    'ASYNC',
    'S',
    'E',
    'W',
    'PL',
]
preview = true

[tool.ruff.lint.per-file-ignores]
'__init__.py' = ['F401', 'F403']
'test_*.py' = ['S101', 'ARG']
'conftest.py' = ['ARG']

[tool.ruff.lint.flake8-type-checking]
runtime-evaluated-base-classes = [
    "pydantic.BaseModel",
    "sqlalchemy.orm.DeclarativeBase",
    "pydantic_settings.BaseSettings",
]

[tool.ruff.format]
preview = true
quote-style = 'single'

[tool.taskipy.tasks]
pre_lint = 'pyrefly check .'
lint = 'ruff check .'
post_lint = 'ruff check . --diff'
pre_format = 'ruff check . --fix'
format = 'ruff format .'
run = 'fastapi dev app/main.py'
pre_test = 'task format'
test = 'pytest -s -x --cov=app -vv'
post_test = 'coverage html'
